applications/workloads/fastapi-demo/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-demo
  namespace: fastapi-demo
spec:
  ingressClassName: nginx
  rules:
    - host: fastapi.onc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-demo
                port:
                  number: 80
